# PersonelTak-p

./: COMMAND.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
src/: personeltak_app.py
src/personeltak/: __init__.py  __main__.py  cli.py  config.py  loader.py  logging_utils.py  record.py  report.py
web/: app.js  index.html  styles.css
